--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,10 @@ dependencies:
   http: ^0.13.5
   image: ^4.0.15
   image_picker: ^0.8.6+2
-  image_picker_windows: ^0.1.0+3
   lottie: ^2.2.0
   provider: ^6.0.5
   shared_preferences: ^2.0.17
   camera: ^0.10.3
-  camera_windows: ^0.2.1+4
 
 dev_dependencies:
   flutter_test:
@@ -34,8 +32,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # example:
