--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,16 @@ dependencies:
   google_fonts: ^4.0.3
   http: ^0.13.5
   image: ^4.0.15
-  image_picker: ^0.8.6+2
   lottie: ^2.2.0
   provider: ^6.0.5
   shared_preferences: ^2.0.17
   camera: ^0.10.3
+  image_picker: ^0.8.6+4
+  go_router_flow: ^6.2.0
+  url_strategy: ^0.2.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +39,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lottie/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # example:
