--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   intl: ^0.18.0
+  flutter_animate: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +37,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lottie/
     - assets/images/
